--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "i": "^0.3.6",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.5",
     "mocha": "^4.0.1",
     "npm": "^5.5.1",
+    "sinon": "^4.1.2",
     "webpack": "^3.8.1"
   },
   "scripts": {
     "test": "node_modules/.bin/karma start config/karma.conf.js",
+    "test:chrome": "node_modules/.bin/karma start config/karma.conf.js --browsers Chrome",
     "karma:init": "node_modules/.bin/karma init"
   },
   "repository": {
